# Generic-MITLP

./: .gitignore  CITATION.cff  README.md  TODO.md  pyproject.toml  qsub.sh  requirements-dev.txt  requirements-web3.txt  requirements.txt
.github/workflows/: ci.yml
benchmarks/: README.md  benchmark_puzzles.py  benchmark_setup.py  benchmark_setup_mitlp_vs_gmitlp.py  benchmark_size.py  benchmark_squarings.py  benchmark_tlp_solve_single.py  consts.py  results.md  utils.py
contracts/: EDTLP.sol  SmartContract.sol
implementation/: GMITLP.py  MITLP.py
implementation/wrappers/: FernetWrapper.py  RsaWrapper.py  SHA512Wrapper.py  __init__.py
lib/: DGMITLP.py  GMITLP.py  MITLP.py  RGMITLP.py  TLP.py  __init__.py  consts.py
lib/gmpy2/: gmpy2.pyi
lib/smartcontracts/: EthereumSC.py  MockSC.py  SCInterface.py  __init__.py
lib/wrappers/: Random.py  RsaWrapper.py  SHA512Wrapper.py  __init__.py
src/contracts/: SmartContract.sol
src/lib/: DGMITLP.py  MITLP.py  TLP.py
src/lib/smartcontracts/: __init__.py
src/lib/wrappers/: SeededRSA.py
src/tlp_lib/: DGMITLP.py  EDTLP.py  GCTLP.py  GMITLP.py  MITLP.py  TLP.py  __init__.py  consts.py  protocols.py
src/tlp_lib/smartcontracts/: EthereumSC.py  MockSC.py  SCInterface.py  __init__.py  protocols.py
src/tlp_lib/wrappers/: FernetWrapper.py  Keccak256Wrapper.py  Random.py  RsaWrapper.py  SHA512Wrapper.py  SeededRSA.py  __init__.py  protocols.py
tests/: DGMITLP_test.py  EDTLP_test.py  GCTLP_test.py  GMITLP_test.py  MITLP_test.py  TLP_test.py
typings/: gmpy2.pyi
typings/eth_tester/: __init__.pyi  constants.pyi  exceptions.pyi  main.pyi
typings/eth_tester/backends/: __init__.pyi  base.pyi  common.pyi
typings/eth_tester/backends/mock/: __init__.pyi  common.pyi  factory.pyi  main.pyi  serializers.pyi
typings/eth_tester/backends/pyevm/: __init__.pyi  main.pyi  serializers.pyi  utils.pyi
typings/eth_tester/normalization/: __init__.pyi  base.pyi  common.pyi  default.pyi  inbound.pyi  outbound.pyi
typings/eth_tester/tools/: gas_burner_contract.pyi
typings/eth_tester/utils/: accounts.pyi  address.pyi  backend_testing.pyi  emitter_contract.pyi  encoding.pyi  filters.pyi  math_contract.pyi  module_loading.pyi  throws_contract.pyi  transactions.pyi
typings/eth_tester/validation/: __init__.pyi  base.pyi  common.pyi  default.pyi  inbound.pyi  outbound.pyi
