[project]
name = "tlp_lib"
version = "0.1.0"
dependencies = [
    "cryptography >= 42.0.4",
    "gmpy2 >=2.2.0rc1",
]

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "basedpyright", "isort", "black"]

[tool.pip-tools]
generate-hashes = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
include_trailing_comma = true
skip_gitignore = true

[tool.black]
target-version = ["py311"]
line_length = 120

[tool.basedpyright]
typeCheckingMode = "standard"
reportMissingTypeStubs = true
verboseOutput = true
reportDeprecated = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true