[project]
name = "tlp_lib"
version = "0.1.0"
dependencies = [
    "cryptography >= 42.0.4",
    "gmpy2 >=2.2.1",
]
[project.optional-dependencies]
dev = ["pip-tools", "pytest", "basedpyright", "isort", "black"]
web3 = ["web3>=6.17.2", "py-solc-x>=2.0.3", "eth-tester", "py-evm"]

[tool.pip-tools]
generate-hashes = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
include_trailing_comma = true
skip_gitignore = true

[tool.black]
target-version = ["py311"]
line_length = 120

[tool.basedpyright]
include = ["src", "tests", "benchmarks"]
strict = ["src", "tests"]
typeCheckingMode = "standard"
reportMissingTypeStubs = true
verboseOutput = true
reportDeprecated = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
